use hard way to repackage
Signed-off-by: xinyual <xinyual@amazon.com>